--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ nav ul li a:hover {
     color: black;
     border-left: 2px solid;
     border-right: 2px solid;    
-    background-image: url(images/ricepaper.jpg); 
+    background-image: url(images/training.jpg); 
 }
 
 #main p {
