--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,7 @@ footer a:link {
 }
 
 footer a:visited {
-    color: navy;
+    color: black;
     background-color: grey;
     text-decoration: none;
 }
