--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
 body {
     font-size: 1.1em;
     font-family: Arial, Helvetica, sans-serif;
-	background-color: grey;
+	background-color: dark grey;
 }
 
 #container {
@@ -115,7 +115,7 @@ footer {
     width: 910px;
     margin: 0;
     padding: 10px;
-    background-color: gray;
+    background-color: black;
     clear: both;
     color: rgb(80, 170, 220);
     font-weight: bold;
