--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
 body {
     font-size: 1.1em;
     font-family: Arial, Helvetica, sans-serif;
-	background-color: #36454F;
+	background-color: rgb(54, 69, 79);
 }
 
 #container {
