--- a/styles.css
+++ b/styles.css
@@ -102,12 +102,14 @@ h2 {
     font-size: 1.4em;
     text-align: center;
     padding-bottom: 0.5em;
+    color: rgb(80, 170, 220);
 }
 
 h3 {
     text-align: center;
     padding-bottom: 0.5em;
     padding-top: 0.5em;
+    color: rgb(80, 170, 220);
 }
 
 footer {
