--- a/forms.css
+++ b/forms.css
@@ -44,7 +44,7 @@ form#survey > * {
 /* Legend Styles */
 
 legend {
-	background-color: rgb(80, 170, 220);
+	background-color: black;
 	color: white;
 	padding: 5px;
 
