--- a/forms.css
+++ b/forms.css
@@ -31,7 +31,7 @@ form#survey {
 }
 
 form#survey > * {
-	background-color: black;
+	background-color: rgb(80, 170, 220);
 	border-radius: 20px;
 	flex: 1 1 300px;
 	font-size: 0.85em;
