--- a/styles.css
+++ b/styles.css
@@ -179,6 +179,26 @@ input[type='submit'], input[type='reset'] {
 }
 
 
+/* Table Styles */
+
+table.schedule {
+	background: white;
+	border: 10px outset orange;
+	border-collapse: collapse;
+	font-size: 1.5em;
+	width: 100%
+}
+
+/* Table Cell Styles */
+
+table.sessions th, table.sessions td {
+	border: 1px solid gray;
+	padding: 5px;
+	vertical-align: top;
+
+
+
+
 /* Validation Styles */
 
 
