--- a/styles.css
+++ b/styles.css
@@ -196,14 +196,10 @@ table.sessions th, table.sessions td {
 	padding: 5px;
 	vertical-align: top;
 
-
+}
 
 
 /* Validation Styles */
-
-
-
-
 
 
 
