--- a/styles.css
+++ b/styles.css
@@ -221,7 +221,9 @@ footer {
     margin-bottom: 10px;
     border: 2px solid;
     border-radius: 25px;
-}/* navigation for footer */
+}
+
+/* navigation for footer */
 footer a:link {
     color: white;
     text-decoration: none;
