--- a/styles.css
+++ b/styles.css
@@ -108,6 +108,7 @@ h2 {
 h3 {
     text-align: center;
     padding-bottom: 10em;
+    padding-top: 0.5em;
     line-height: 30px;
     color: rgb(100, 149, 237);
 }
