--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ h2 {
 h3 {
     text-align: center;
     padding-top: 0.5em;
-    padding-bottom: 10em;
+    padding-bottom: o.5em;
     color: rgb(100, 149, 237);
 }
 
